# dndrs

./: Cargo.toml
dnd/: Cargo.toml  _script.py  script.py
dnd/src/: lib.rs
dnd/src/attack/: mod.rs
dnd/src/character/: class.rs  error.rs  level.rs  mod.rs  skills.rs  spells.rs
dnd/src/character/class/: consts.rs
dnd/src/character/spells/: consts.rs
dnd/src/cost/: mod.rs
dnd/src/dice/: mod.rs
dnd/src/items/: consts.rs  mod.rs
dnd/src/languages/: mod.rs
src/: lib.rs
src/character/: class.rs  level.rs  mod.rs  proficiencies.rs  skills.rs  stats.rs
src/damage/: mod.rs
src/dice/: consts.rs  mod.rs
src/items/: mod.rs
tuidnd/: Cargo.toml  liza.ron
tuidnd/src/: config.rs  event.rs  handler.rs  main.rs  tui.rs  ui.rs
tuidnd/src/ui/: impls.rs
