[package]
name = "tuidnd"
version = "0.1.0"
edition = "2024"

[dependencies]
dnd = { path = "../dnd" }
clap = { version = "4.5.39", features = ["derive"] }
ratatui = "0.29.0"
serde = "1.0.219"
serde_json = "1.0.140"
anyhow = "1.0.98"
crossterm = "0.29.0"
ron = "0.10.1"
derive_more = { version = "2.0.1", features = ["deref"] }
